[package]
name = "blinky_dual_target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.4.0"
embedded-time = "0.12.1"
cortex-m = "0.7.6"
# cortex-m-rt = {version = "0.7.1", optional = true}
cortex-m-rt = "0.7.1"
# cortex-m-rt = { version = "0.7", optional = true }
panic-halt = "0.2.0"
embedded-hal = "0.2.7"


[dev-dependencies]
